# langchain_library

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt
components/nodes/deterministic_nodes/: jira_fetcher.py
components/nodes/model_nodes/: ticket_analyzer.py
components/state_schemas/: base_schemas.py
documentation/examples/: CLAUDE_example.md
documentation/learning_guides/: Build First LangGraph Workflow.md  Build Ticket Analyzer Model Node.md
examples/: basic_jira_fetcher.py  simple_graph.py
tests/unit/: test_jira_fetcher.py
